# Cackel

./: .gitignore  meson.build
docs/: grammer.ebnf
src/: Compiler.cpp  Compiler.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  llvm_stdostream.hpp  main.cpp  util.hpp
src/Compiler/: Compiler.cpp  Compiler.hpp
src/Lexer/: Lexer.cpp  Lexer.hpp
src/Parser/: BaseKinds.inc  DeclKinds.inc  ExternKinds.inc  Nodes.cpp  Nodes.hpp  Parser.cpp  Parser.hpp  StatementKinds.inc  TypeKinds.inc  old_parser.cpp
src/Parser/Pass/FunctionExitVerifier/: FunctionExitVerifier.cpp  FunctionExitVerifier.hpp
src/Parser/Pass/NumberConverter/: NumberConverter.cpp  NumberConverter.hpp
src/Util/: llvm_stdostream.hpp  util.cpp  util.hpp
test/: build_ll.sh  function-test.l  operator_test.l  start.s  test.l
